--- a/index.html
+++ b/index.html
@@ -36,39 +36,42 @@
             <p>Experience modern elegance with luxurious accommodations, world-class amenities, and award-winning dining options. Enjoy ultimate comfort and relaxation with our state-of-the-art fitness center and rejuvenating spa services. Make your stay in Lona unforgettable with ModernStay's unparalleled luxury and style.</p>
             <button>Book Now</button>
         </div>
-        <div class="img_containder"><img src="./img/hotel.jpg"/></div>
+        <div class="img_container">
+            <img src="./img/hotel.jpg"/>
+        </div>
+    
     </section>
 
     <section class="amenities">
         <h1>Why choose ModernStay?</h1>
         <div class="amenities_list">
             <div class="am_card">
-                <i class="fa-solid fa-city"></i>
+                <div class="am_icon"><i class="fa-solid fa-city"></i></div>
                 <h4>Location</h4>
                 <p>Unbeatable location in the heart of the city, just steps away from top attractions.</p>
             </div>
             <div class="am_card">
-                <i class="fa-solid fa-bed"></i>
+                <div class="am_icon"><i class="fa-solid fa-bed"></i></div>
                 <h4>Accommodations</h4>
                 <p>Luxurious accommodations featuring plush bedding, high-end amenities, and stunning views.</p>
             </div>
             <div class="am_card">
-                <i class="fa fa-cutlery" aria-hidden="true"></i>
+                <div class="am_icon"><i class="fa fa-cutlery" aria-hidden="true"></i></div>
                 <h4>Dining</h4>
                 <p>World-class dining options with a variety of culinary delights prepared by our award-winning chefs.</p>
             </div>
             <div class="am_card">
-                <i class="fa-solid fa-dumbbell"></i>
+                <div class="am_icon"><i class="fa-solid fa-dumbbell"></i></div>
                 <h4>Fitness</h4>
                 <p>State-of-the-art fitness center, refreshing pool, and relaxing spa services for ultimate rejuvenation.</p>
             </div>
             <div class="am_card">
-                <i class="fas fa-comments"></i>
+                <div class="am_icon"><i class="fas fa-comments"></i></div>
                 <h4>Customer Service</h4>
                 <p>Impeccable customer service and attention to detail to ensure a flawless stay.</p>
             </div>
             <div class="am_card">
-                <i class="fa-solid fa-couch"></i>
+                <div class="am_icon"><i class="fa-solid fa-couch"></i></div>
                 <h4>Lounge</h4>
                 <p>Inviting lounge for guests to relax and unwind.</p>
             </div>
@@ -79,7 +82,7 @@
     </section>
 
     <section class="facilities">
-        <a class="fac_header" href="/">Facilities</a>
+        <a class="fac_header" href="/">Facilities<i class="fa fa-external-link"></i></a>
         <div class="facilities_list">
             <div class="fac_card">
                 <img src="./img/lounge.jpg" class="fac_img" />
